--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>thanwannahtun</title>
+  <title>Thanwanna Htun</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
